force-app/main/default/objects/Solution_Set_HW_Role_Relation__c/Solution_Set_HW_Role_Relation__c.object-meta.xml
<CustomObject>
    <label>Solution Set - HW Role Relation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Set - HW Role Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>