force-app/main/default/objects/Solution_Set_HW_Role_Relation__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>An external id that uniquely identifies a solution set record for inbound integration (upsert requests)</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>