force-app/main/default/objects/Solution_Set_HW_Role_Relation__c/fields/HW_Role_Id__c.field-meta.xml
<CustomField>
    <fullName>HW_Role_Id__c</fullName>
    <externalId>true</externalId>
    <label>HW Role Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>