force-app/main/default/objects/Solution_Set_HW_Role_Relation__c/fields/HW_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>HW_Role_Name__c</fullName>
    <label>HW Role Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>